# link

./: .gitignore  AGENTS.md  CLAUDE.md  FIX_WORKBENCH_DOWNLOAD_PROGRESS.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
scripts/: gen-icon-source.mjs
src/: App.vue  main.ts  pathDisplay.test.ts  pathDisplay.ts  settingsModel.ts  styles.css  subtitleReviewModel.test.ts  subtitleReviewModel.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: ai.rs  app_log.rs  app_paths.rs  command_utils.rs  content_copy.rs  dubbing.rs  dubbing_alignment.rs  dubbing_compose.rs  home_tasks.rs  home_workbench.rs  htdemucs.rs  lib.rs  main.rs  settings.rs  subtitle_ai.rs  subtitle_alignment.rs  subtitle_burn.rs  subtitle_export.rs  subtitle_review.rs  subtitle_style.rs  subtitle_translation.rs  transcription.rs  workbench_checkpoint.rs  youtube_monitor.rs  ytdlp.rs
src/components/: Sidebar.vue  SubtitleTimeline.vue  TitleBar.vue
src/composables/: useTheme.ts
src/router/: index.ts
src/views/: ContentCopy.vue  Dubbing.vue  Home.vue  Settings.vue  SubtitleBurn.vue  SubtitleReview.vue  SubtitleStyle.vue  Translate.vue  YoutubeMonitor.vue
