[package]
name = "link"
version = "0.1.0"
description = "Link"
authors = ["leica"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
tempfile = "3"
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"
chrono = "0.4"
base64 = "0.22"
html-escape = "0.2"
encoding_rs = "0.8"
md5 = "0.7"
sha2 = "0.10"
tungstenite = { version = "0.29", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
hound = "3.5"
tch = "0.22"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
